#*************************************************************************
#
# File: Makefile.am
#
# This file can be used with automake to generate the Makefiles for the
# identifiability library and for the identifiability driver program.
#
# Author: Mitch Watrous
#
#*************************************************************************

# Use GNU's conventions for the automake process. 
AUTOMAKE_OPTIONS = gnu

# Set the subdirectories for which to generate their Makefiles.
SUBDIRS = src