lib_LTLIBRARIES = libspd.la libspd_release.la

CXXFLAGS   =
CXXCOMPILE =
CFLAGS     =

libspd_la_CXXFLAGS           = -g
libspd_la_CXXCOMPILE         = -g
libspd_release_la_CXXFLAGS   = -O3
libspd_release_la_CXXCOMPILE = -O3

libspd_la_SOURCES = \
	ABA_x.cpp \
	add.cpp \
	AkronBtimesC.cpp \
	AkronItimesC.cpp \
	allTrue.cpp \
	allZero.cpp \
	backDiv.cpp \
	BlockAlloc.cpp \
	blockDiagonalDerivative.cpp \
	broadCastEndOfSpk.cpp \
	centdiff.cpp \
	Channel.cpp \
	cholesky.cpp \
	countTrues.cpp \
	Covariance.cpp \
	det.cpp \
	DirBasedParallelControls.cpp \
	divByScalar.cpp \
	DoubleMatrix.cpp \
	elementwiseAnd.cpp \
	elementwiseOr.cpp \
	elsq.cpp \
	elsq_xBlockDiag.cpp \
	elsq_x.cpp \
	elsq_xDiag.cpp \
	EqIndModel.cpp \
	estimateB.cpp \
	expectedHessian.cpp \
	extractIndex.cpp \
	File.cpp \
	firstOrderOpt.cpp \
	FpErrorChecker.cpp \
	FullCovariance.cpp \
	FullDataCovariance.cpp \
	Function.cpp \
	FullIndParCovariance.cpp \
	getCol.cpp \
	getMulCols.cpp \
	getMulRows.cpp \
	getRow.cpp \
	getSubblock.cpp \
	hTilde.cpp \
	identity.cpp \
	IkronBtimesC.cpp \
	IndInputDataPackage.cpp \
	IndOutputDataPackage.cpp \
	IndResults.cpp \
	indStatistics.cpp \
	IndVars.cpp \
	inverse.cpp \
	inxToMax.cpp \
	isDmatEpsEqual.cpp \
	isEndOfSpk.cpp \
	isGreaterThanOrEqualTo.cpp \
	isLessThanOrEqualTo.cpp \
	isSymmetric.cpp \
	lambda.cpp \
	lambdaDiff.cpp \
	lambda2diff.cpp \
	lTilde.cpp \
	mapObj.cpp \
	mapObjDiff.cpp \
	mapOpt.cpp \
	mapTilde.cpp \
	matabs.cpp \
	matmax.cpp \
	matmin.cpp \
	mulByScalar.cpp \
	multiply.cpp \
	NaiveFoModel.cpp \
	node.cpp \
	norm.cpp  \
	Optimizer.cpp \
	placeRows.cpp \
	PopConstVals.cpp \
	popStatistics.cpp \
	PopVars.cpp \
	ppdOpt.cpp \
	ppedOpt.cpp \
	ppkaOpt.cpp \
	ppkaOptParallel.cpp \
	quasiNewtonAnyBox.cpp \
	replaceIth.cpp \
	replaceJth.cpp \
	replaceSubblock.cpp \
	residuals.cpp \
	rvecInverse.cpp \
	statistics.cpp \
	StatusList.cpp \
	subtract.cpp \
	symmetrize.cpp \
	SpdModel.cpp \
	SpkError.cpp \
	SpkException.cpp \
	SpkModel.cpp \
	SpkWarning.cpp \
	System.cpp \
	transpose.cpp \
	transposeDerivative.cpp \
	transposeRowBlocks.cpp \
	UTranTimesSymKronSymTimesU.cpp \
	UTranTimesSymKronSymTimesU_x.cpp \
	ABA_x.h \
	add.h \
	AkronBtimesC.h \
	AkronItimesC.h \
	allTrue.h \
	allZero.h \
	backDiv.h \
	BlockAlloc.h \
	blockDiagonalDerivative.h \
	broadCastEndOfSpk.h \
	centdiff.h \
	Channel.h \
	cholesky.h \
	countTrues.h \
	Covariance.h \
	DBL_EPS_EQUAL_MULT.h \
	det.h \
	DoubleMatrix.h \
	divByScalar.h \
	DirBasedParallelControls.h \
	elementwiseAnd.h \
	elementwiseOr.h \
	elsq.h \
	elsq_x.h \
	elsq_xBlockDiag.h \
	elsq_xDiag.h \
	EqIndModel.h \
	estimateB.h \
	expectedHessian.h \
	extractIndex.h \
	File.h \
	firstOrderOpt.h \
	FoMapsParSpkModel.h \
	FpErrorChecker.h \
	FullCovariance.h \
	FullDataCovariance.h \
	FullIndParCovariance.h \
	Function.h \
	getCol.h \
	getMulCols.h \
	getMulRows.h \
	getRow.h \
	getSubblock.h \
	hTilde.h \
	IkronBtimesC.h \
	identity.h \
	IndDataPackage.h \
	IndResults.h \
	indStatistics.h \
	IndVars.h \
	inverse.h \
	inxToMax.h \
	isDblEpsEqual.h \
	isDmatEpsEqual.h \
	isEndOfSpk.h \
	isGreaterThanOrEqualTo.h \
	isLessThanOrEqualTo.h \
	isSymmetric.h \
	lambda.h \
	lambdaDiff.h \
	lambda2diff.h \
	mapObjDiff.h \
	mapObj.h \
	mapOpt.h \
	mapTilde.h \
	matmax.h \
	matabs.h \
	matmin.h \
	mulByScalar.h \
	multiply.h \
	namespace_population_analysis.h \
	NaiveFoModel.h \
	node.h \
	norm.h \
	Optimizer.h \
	Objective.h \
	lTilde.h \
	ParallelControls.h \
	PARALLEL_FILE_CONSTS.h \
	pi.h \
	placeRows.h \
	PopConstVals.h \
	popStatistics.h \
	PopVars.h \
	ppdOpt.h \
	ppedOpt.h \
	ppkaOpt.h \
	printInMatrix.h \
	quasiNewtonAnyBox.h \
	replaceIth.h \
	replaceJth.h \
	replaceSubblock.h \
	residuals.h \
	rvec.h \
	rvecInverse.h \
	SpdModel.h \
	Spk.h \
	SpkError.h \
	SpkException.h \
	SpkModel.h \
	SpkValarray.h \
	SpkWarning.h \
	statistics.h \
	StatusList.h \
	subtract.h \
	symmetrize.h \
	System.h \
	transpose.h \
	transposeDerivative.h \
	transposeRowBlocks.h \
	UTranTimesSymKronSymTimesU.h \
	UTranTimesSymKronSymTimesU_x.h
 
libspd_release_la_SOURCES = \
	ABA_x.cpp \
	add.cpp \
	AkronBtimesC.cpp \
	AkronItimesC.cpp \
	allTrue.cpp \
	allZero.cpp \
	backDiv.cpp \
	BlockAlloc.cpp \
	blockDiagonalDerivative.cpp \
	broadCastEndOfSpk.cpp \
	centdiff.cpp \
	Channel.cpp \
	cholesky.cpp \
	countTrues.cpp \
	Covariance.cpp \
	det.cpp \
	DirBasedParallelControls.cpp \
	divByScalar.cpp \
	DoubleMatrix.cpp \
	elementwiseAnd.cpp \
	elementwiseOr.cpp \
	elsq.cpp \
	elsq_xBlockDiag.cpp \
	elsq_x.cpp \
	elsq_xDiag.cpp \
	EqIndModel.cpp \
	estimateB.cpp \
	expectedHessian.cpp \
	extractIndex.cpp \
	File.cpp \
	firstOrderOpt.cpp \
	FpErrorChecker.cpp \
	FullCovariance.cpp \
	FullDataCovariance.cpp \
	Function.cpp \
	FullIndParCovariance.cpp \
	getCol.cpp \
	getMulCols.cpp \
	getMulRows.cpp \
	getRow.cpp \
	getSubblock.cpp \
	hTilde.cpp \
	identity.cpp \
	IkronBtimesC.cpp \
	IndInputDataPackage.cpp \
	IndOutputDataPackage.cpp \
	IndResults.cpp \
	indStatistics.cpp \
	IndVars.cpp \
	inverse.cpp \
	inxToMax.cpp \
	isDmatEpsEqual.cpp \
	isEndOfSpk.cpp \
	isGreaterThanOrEqualTo.cpp \
	isLessThanOrEqualTo.cpp \
	isSymmetric.cpp \
	lambda.cpp \
	lambdaDiff.cpp \
	lambda2diff.cpp \
	lTilde.cpp \
	mapObj.cpp \
	mapObjDiff.cpp \
	mapOpt.cpp \
	mapTilde.cpp \
	matabs.cpp \
	matmax.cpp \
	matmin.cpp \
	mulByScalar.cpp \
	multiply.cpp \
	NaiveFoModel.cpp \
	node.cpp \
	norm.cpp  \
	Optimizer.cpp \
	placeRows.cpp \
	PopConstVals.cpp \
	popStatistics.cpp \
	PopVars.cpp \
	ppdOpt.cpp \
	ppedOpt.cpp \
	ppkaOpt.cpp \
	ppkaOptParallel.cpp \
	quasiNewtonAnyBox.cpp \
	replaceIth.cpp \
	replaceJth.cpp \
	replaceSubblock.cpp \
	residuals.cpp \
	rvecInverse.cpp \
	StatusList.cpp \
	subtract.cpp \
	symmetrize.cpp \
	SpdModel.cpp \
	SpkError.cpp \
	SpkException.cpp \
	SpkModel.cpp \
	SpkWarning.cpp \
	System.cpp \
	transpose.cpp \
	transposeDerivative.cpp \
	transposeRowBlocks.cpp \
	UTranTimesSymKronSymTimesU.cpp \
	UTranTimesSymKronSymTimesU_x.cpp \
	ABA_x.h \
	add.h \
	AkronBtimesC.h \
	AkronItimesC.h \
	allTrue.h \
	allZero.h \
	backDiv.h \
	BlockAlloc.h \
	blockDiagonalDerivative.h \
	broadCastEndOfSpk.h \
	centdiff.h \
	Channel.h \
	cholesky.h \
	countTrues.h \
	Covariance.h \
	DBL_EPS_EQUAL_MULT.h \
	det.h \
	DoubleMatrix.h \
	divByScalar.h \
	DirBasedParallelControls.h \
	elementwiseAnd.h \
	elementwiseOr.h \
	elsq.h \
	elsq_x.h \
	elsq_xBlockDiag.h \
	elsq_xDiag.h \
	EqIndModel.h \
	estimateB.h \
	expectedHessian.h \
	extractIndex.h \
	File.h \
	firstOrderOpt.h \
	FoMapsParSpkModel.h \
	FpErrorChecker.h \
	FullCovariance.h \
	FullDataCovariance.h \
	FullIndParCovariance.h \
	Function.h \
	getCol.h \
	getMulCols.h \
	getMulRows.h \
	getRow.h \
	getSubblock.h \
	hTilde.h \
	IkronBtimesC.h \
	identity.h \
	IndDataPackage.h \
	IndResults.h \
	indStatistics.h \
	IndVars.h \
	inverse.h \
	inxToMax.h \
	isDblEpsEqual.h \
	isDmatEpsEqual.h \
	isEndOfSpk.h \
	isGreaterThanOrEqualTo.h \
	isLessThanOrEqualTo.h \
	isSymmetric.h \
	lambda.h \
	lambdaDiff.h \
	lambda2diff.h \
	mapObjDiff.h \
	mapObj.h \
	mapOpt.h \
	mapTilde.h \
	matmax.h \
	matabs.h \
	matmin.h \
	mulByScalar.h \
	multiply.h \
	namespace_population_analysis.h \
	NaiveFoModel.h \
	node.h \
	norm.h \
	Optimizer.h \
	Objective.h \
	lTilde.h \
	ParallelControls.h \
	PARALLEL_FILE_CONSTS.h \
	pi.h \
	placeRows.h \
	PopConstVals.h \
	popStatistics.h \
	PopVars.h \
	ppdOpt.h \
	ppedOpt.h \
	ppkaOpt.h \
	printInMatrix.h \
	quasiNewtonAnyBox.h \
	replaceIth.h \
	replaceJth.h \
	replaceSubblock.h \
	residuals.h \
	rvec.h \
	rvecInverse.h \
	SpdModel.h \
	Spk.h \
	SpkError.h \
	SpkException.h \
	SpkModel.h \
	SpkValarray.h \
	SpkWarning.h \
	statistics.h \
	StatusList.h \
	subtract.h \
	symmetrize.h \
	System.h \
	transpose.h \
	transposeDerivative.h \
	transposeRowBlocks.h \
	UTranTimesSymKronSymTimesU.h \
	UTranTimesSymKronSymTimesU_x.h 

INCLUDES = -I@top_srcdir@/
pkginclude_HEADERS = \
	ABA_x.h \
	add.h \
	AkronBtimesC.h \
	AkronItimesC.h \
	allTrue.h \
	allZero.h \
	backDiv.h \
	BlockAlloc.h \
	blockDiagonalDerivative.h \
	broadCastEndOfSpk.h \
	centdiff.h \
	Channel.h \
	cholesky.h \
	countTrues.h \
	Covariance.h \
	DBL_EPS_EQUAL_MULT.h \
	det.h \
	divByScalar.h \
	DirBasedParallelControls.h \
	DoubleMatrix.h \
	elementwiseAnd.h \
	elementwiseOr.h \
	elsq.h \
	elsq_x.h \
	elsq_xBlockDiag.h \
	elsq_xDiag.h \
	EqIndModel.h \
	estimateB.h \
	expectedHessian.h \
	extractIndex.h \
	File.h \
	firstOrderOpt.h \
	FoMapsParSpkModel.h \
	FpErrorChecker.h \
	FullCovariance.h \
	FullDataCovariance.h \
	FullIndParCovariance.h \
	Function.h \
	getCol.h \
	getMulCols.h \
	getMulRows.h \
	getRow.h \
	getSubblock.h \
	hTilde.h \
	identity.h \
	IkronBtimesC.h \
	IndDataPackage.h \
	IndResults.h \
	indStatistics.h \
	IndVars.h \
	inverse.h \
	inxToMax.h \
	isDblEpsEqual.h \
	isDmatEpsEqual.h \
	isEndOfSpk.h \
	isGreaterThanOrEqualTo.h \
	isLessThanOrEqualTo.h \
	isSymmetric.h \
	lTilde.h \
	lambda.h \
	lambdaDiff.h \
	lambda2diff.h \
	mapObjDiff.h \
	mapObj.h \
	mapOpt.h \
	mapTilde.h \
	matmax.h \
	matabs.h \
	matmin.h \
	mulByScalar.h \
	multiply.h \
	NaiveFoModel.h \
	namespace_population_analysis.h \
	node.h \
	norm.h \
	Objective.h \
	Optimizer.h \
	ParallelControls.h \
	PARALLEL_FILE_CONSTS.h \
	pi.h \
	placeRows.h \
	PopConstVals.h \
	popStatistics.h \
	PopVars.h \
	ppdOpt.h \
	ppedOpt.h \
	ppkaOpt.h \
	printInMatrix.h \
	quasiNewtonAnyBox.h \
	replaceIth.h \
	replaceJth.h \
	replaceSubblock.h \
	residuals.h \
	rvec.h \
	rvecInverse.h \
	SpdModel.h \
	Spk.h \
	SpkError.h \
	SpkException.h \
	SpkModel.h \
	SpkValarray.h \
	SpkWarning.h \
	statistics.h \
	StatusList.h \
	subtract.h \
	symmetrize.h \
	System.h \
	transpose.h \
	transposeDerivative.h \
	transposeRowBlocks.h \
	UTranTimesSymKronSymTimesU.h \
	UTranTimesSymKronSymTimesU_x.h 
